display player one 1 ships and ...
make new random board button work.
also display player 2fields in different colors
depending on if a field or ship was hit

--- a/src/style.css
+++ b/src/style.css
@@ -11,11 +11,19 @@ body {
     padding: 10px;
 }
 
-.field {
+.field, .ship {
     height: 20px;
     width: 20px;
     border: 1px solid black;
 }
+
+.p1-ship {
+    background-color: aqua;
+}
+
+/* .p2-ship {
+    background-color: red;
+} */
 
 .board {
     display: flex;
@@ -24,4 +32,12 @@ body {
 
 .board > div {
     display: flex;
+}
+
+div [hit = "true"] {
+    background-color: brown;
+}
+
+div [class~="ship"][hit = "true"]{
+    background-color: black;
 }
