--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,13 @@
+* {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
 }
 
 .game-field {
@@ -9,19 +15,25 @@ body {
     display: flex;
     justify-content: space-around;
     padding: 10px;
+    gap: 30px;
+    min-width: 670px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px black;
+    background-color: #b7cff2;
 }
 
 .field, .ship {
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     border: 1px solid black;
+    background-color: #e1e1e1;
 }
 
 .p1-ship {
-    background-color: aqua;
+    background-color: rgb(62, 77, 77);
 }
 
-/* .p2-ship {
+/*  .p2-ship {
     background-color: red;
 } */
 
@@ -35,9 +47,49 @@ body {
 }
 
 div [hit = "true"] {
-    background-color: brown;
+    background-color: rgb(59, 129, 157);
 }
 
 div [class~="ship"][hit = "true"]{
-    background-color: black;
+    background-color: rgb(221, 100, 44);
+}
+
+.winner-box {
+    position: absolute;
+
+    width: 400px;
+    margin-top: 100px;
+    margin-left: calc(50vw - 200px);
+
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    gap: 30px;
+
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.337);
+
+    background-color: #b7cff2;
+
+    text-align: center;
+}
+
+.winner-text {
+    text-shadow: 0px 0px 3px #00000031;
+}
+
+.winner-btn {
+    color: #b7cff2;
+    background-color: #1b232e;
+}
+
+button {    
+    padding: 5px 15px;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.169);
+    margin-left: 20px;
+    background-color: #b7cff2;
 }
