--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@ body {
     flex-direction: column;
     gap: 20px;
     position: relative;
+    width: 100vw;
+    align-items: center;
+    padding-top: 50px;
 }
 
 .game-field {
@@ -33,7 +36,7 @@ body {
     background-color: rgb(62, 77, 77);
 }
 
-/*  .p2-ship {
+/* .p2-ship {
     background-color: red;
 } */
 
@@ -59,8 +62,7 @@ div [class~="ship"][hit = "true"]{
 
     width: 400px;
     margin-top: 100px;
-    margin-left: calc(50vw - 200px);
-
+    
     display: flex;
     flex-direction: column;
     padding: 50px;
@@ -87,7 +89,7 @@ div [class~="ship"][hit = "true"]{
 button {    
     padding: 5px 15px;
     font-size: 20px;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.312);
     border-radius: 5px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.169);
     margin-left: 20px;
